--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -28,12 +28,19 @@
 
     @if (e > 5)
     {
-        <h1>Condition is True</h1>
+        e++;
+        <h1>Condition is True,Value is @e</h1>
     }
     else
     {
-        <h1>Condition is False</h1>
+        e++;
+         <h1>Condition is False,Value is @e</h1>
     }
+
+
+    <h2> Ternary -@(a==10?b=10:b=5)</h2>
+
+    <h2>Values of b @b</h2>
     <p>This is the home page</p>
 </body>
 </html>
