--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,67 +9,22 @@
     <title>Index</title>
 </head>
 <body>
-    <h1>Welcome to book Store application</h1>
-    @{
-        int a = 1;
-    }
-
-    @switch (a)
+    @*@for (int i = 0; i < 10; i++)
     {
-        case 1:<h1>i am 1</h1>
-            break;
-        case 2:<h1>i am 2</h1>
-            break;
-
-        case 3:<h1>i am 3</h1>
-            break;
-
-        case 4:<h1>i am 4</h1>
-            break;
-
-        case 5:<h1>i am 5</h1>
-            break;
+    <h1>Welcome to book Store application @i</h1>
+    }*@
 
 
 
-        default:<h1>Hi am Default</h1>
-            break;
+    @{ 
+        var list = new List<int> { 1, 2, 3, 4, 5 };
     }
 
+    @foreach(var item in list)
+            {
+                <h1>@item</h1>
+            }
 
 
-
-    @*<h1>@DateTime.Now</h1>
-        <h1>Sum= @(3+5)</h1>
-        <hr />
-        <h1>MultiLine -</h1>
-        @{
-            int a = 10;
-            int b = 20;
-            int c = a + b;
-
-        }
-        <h1>@c</h1>
-
-        @{
-            int e = 4;
-        }
-
-        @if (e > 5)
-        {
-            e++;
-            <h1>Condition is True,Value is @e</h1>
-        }
-        else
-        {
-            e++;
-             <h1>Condition is False,Value is @e</h1>
-        }
-
-
-        <h2> Ternary -@(a==10?b=10:b=5)</h2>
-
-        <h2>Values of b @b</h2>
-        <p>This is the home page</p>*@
 </body>
 </html>
