Other Folder Used For Images

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,10 +10,11 @@
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <img src="~/images/logo.jpg" class="logo" alt="logo"/>
- 
+    <img src="~/images/logo.jpg" class="logo" alt="logo" />
+
+    
     <h1>Welcome to book Store application</h1>
- 
+    <img src="~/MyStaticFile/bookbranding.jpg" alt="dummy" class="logo"/>
 
 
 
