Added libman to use client side library

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,15 +8,23 @@
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
     <link href="~/css/site.css" rel="stylesheet" />
+    <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
 </head>
-<body>
+<body class="container">
     <img src="~/images/logo.jpg" class="logo" alt="logo" />
 
+    <input type="button" value="Click me" class="btn btn-danger"
+
+    <h1 class="h1">Welcome to book Store application</h1>
     
-    <h1>Welcome to book Store application</h1>
-    <img src="~/MyStaticFile/bookbranding.jpg" alt="dummy" class="logo"/>
 
 
 
 </body>
+<script src="~/lib/jquery/jquery.js"></script>
 </html>
+<script>
+    $(document).ready(function () {
+        alert("Page Loaded");
+    })
+</script>
