--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,9 +13,10 @@
 <body class="container">
     <img src="~/images/logo.jpg" class="logo" alt="logo" />
 
-    <input type="button" value="Click me" class="btn btn-danger"
+    <input type="button" value="Click me" class="btn btn-danger"/>
 
     <h1 class="h1">Welcome to book Store application</h1>
+    <p>this is admin page</p>
     
 
 
@@ -25,6 +26,6 @@
 </html>
 <script>
     $(document).ready(function () {
-        alert("Page Loaded");
+       // alert("Page Loaded");
     })
 </script>
