--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,31 +1,13 @@
 ﻿@{
-    Layout = null;
+    Layout = "_Layout";
 }
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-    <link href="~/css/site.css" rel="stylesheet" />
-    <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
-</head>
-<body class="container">
+
+
     <img src="~/images/logo.jpg" class="logo" alt="logo" />
 
-    <input type="button" value="Click me" class="btn btn-danger"/>
-
-    <h1 class="h1">Welcome to book Store application</h1>
-    <p>this is admin page</p>
-    
+    <h1 class="h1">Welcome to Home Page</h1>
+   
 
 
 
-</body>
-<script src="~/lib/jquery/jquery.js"></script>
-</html>
-<script>
-    $(document).ready(function () {
-       // alert("Page Loaded");
-    })
-</script>
