Added book details page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -67,3 +67,13 @@
     </div>
 </div>
 
+
+@section scripts{
+
+    <script>
+        $(document).ready(function () {
+          //  alert("document is ready")
+        })
+    </script>
+
+}
