--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
-﻿
+﻿@*@{
+    ViewData["Title"] = "Home";
+}*@
 
 <section class="jumbotron text-center">
     <div class="container">
-        <h1>Welcome to Bookstore</h1>
+        <h1>Welcome to Bookstore @ViewData["CustomProperty"]</h1>
         <p class="lead text-muted">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -68,7 +70,7 @@
 
     <script>
         $(document).ready(function () {
-          //  alert("document is ready")
+            //  alert("document is ready")
         })
     </script>
 
