--- a/Views/Book/GetAllBooks.cshtml
+++ b/Views/Book/GetAllBooks.cshtml
@@ -5,6 +5,8 @@
 @model IEnumerable<Book>
 
 
+
+
 <div class="container">
     <h3 class="display-4">All books</h3>
     <div class="row">
@@ -18,7 +20,9 @@
                         <p class="card-text">@book.Description</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="/book/GetBook/@book.Id" class="btn btn-sm btn-outline-secondary">View details</a>
+                                <a asp-controller="book" asp-action="GetBook" asp-route-id="@book.Id" 
+                                   asp-route-nameOfBook="@book.Title"
+                                   class="btn btn-sm btn-outline-secondary">View details</a>
                             </div>
                             <small class="text-muted">@book.Author</small>
                         </div>
