--- a/Views/Book/GetBook.cshtml
+++ b/Views/Book/GetBook.cshtml
@@ -77,7 +77,7 @@
 
     <hr />
 
-    <div class="py-5 bg-light">
+    <div class="py-5 bg-light" id="similarBooks">
         <h3 class="h3">Similar books</h3>
         <div class="row">
             @for (int i = 0; i < 5; i++)
