--- a/Views/Book/GetAllBooks.cshtml
+++ b/Views/Book/GetAllBooks.cshtml
@@ -20,8 +20,8 @@
                         <p class="card-text">@book.Description</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a asp-controller="book" asp-action="GetBook" asp-route-id="@book.Id" 
-                                   asp-route-nameOfBook="@book.Title"
+                                <a asp-route="BookDetailsRoute" asp-route-id="@book.Id" 
+
                                    class="btn btn-sm btn-outline-secondary">View details</a>
                             </div>
                             <small class="text-muted">@book.Author</small>
