--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,6 +5,14 @@
 <section class="jumbotron text-center">
     <div class="container">
         <h1>Welcome to Bookstore @ViewData["CustomProperty"]</h1>
+
+        <environment names="Development">
+            <h3>Development</h3>
+        </environment>
+
+        <environment names="Production">
+            <h3>Production</h3>
+        </environment>
         <p class="lead text-muted">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
