--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" href="/">
-                    <img src="~/images/logo.jpg" width="100" height="100" />
+                    <img src="~/images/logo.jpg" width="100" height="100" asp-append-version="true" />
                     Book store
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -39,6 +39,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="book" asp-action="getallbooks">All Books</a>
                         </li>
+                        @*<li class="nav-item">
+                            <a class="nav-link text-dark" asp-protocol="http" asp-host="google.com"  asp-action="getallbooks">All Books</a>
+                        </li>*@
                     </ul>
                 </div>
             </div>
