--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,9 +39,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="book" asp-action="getallbooks">All Books</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="book" asp-action="AddNewBook">Add New Book</a>
+                        </li>
                         @*<li class="nav-item">
-                            <a class="nav-link text-dark" asp-protocol="http" asp-host="google.com"  asp-action="getallbooks">All Books</a>
-                        </li>*@
+            <a class="nav-link text-dark" asp-protocol="http" asp-host="google.com"  asp-action="getallbooks">All Books</a>
+        </li>*@
                     </ul>
                 </div>
             </div>
