--- a/Views/Book/AddNewBook.cshtml
+++ b/Views/Book/AddNewBook.cshtml
@@ -18,13 +18,23 @@
     }
 
 <form method="post" asp-action="AddNewBook" asp-controller="Book">
+    <div asp-validation-summary="All"></div>
+
+    <div class="form-group">
+        <label asp-for="MyField"></label>
+        <input asp-for="MyField" class="form-control" />
+        <span asp-validation-for="MyField" class="text-danger"></span>
+
+    </div>
+
+
     <div class="form-group">
         <label asp-for="Title"></label>
-        <input asp-for="Title" class="form-control"/>
+        <input asp-for="Title" class="form-control" />
         <span asp-validation-for="Title" class="text-danger"></span>
 
     </div>
- 
+
 
 
     <div class="form-group">
