--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewData["Title"] | Book store application</title>
     <link href="~/css/site.css" rel="stylesheet" />
+
     <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/lib/twitter-bootstrap/css/bootstrap-grid.css" rel="stylesheet" />
+    <link href="~/lib/twitter-bootstrap/css/bootstrap-reboot.css" rel="stylesheet" />
+    <link href="~/lib/twitter-bootstrap/css/bootstrap-utilities.css" rel="stylesheet" />
 </head>
 <body>
     <header>
