Upload Multiple Image

--- a/Views/Book/GetAllBooks.cshtml
+++ b/Views/Book/GetAllBooks.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "All books";
 }
+@*@model Book*@
 
 
 
@@ -20,8 +21,7 @@
                         <p class="card-text">@book.Description</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a asp-route="BookDetailsRoute" asp-route-id="@book.Id" 
-
+                                <a asp-route="BookDetailsRoute" asp-route-id="@book.Id"
                                    class="btn btn-sm btn-outline-secondary">View details</a>
                             </div>
                             <small class="text-muted">@book.Author</small>
