--- a/Views/Book/AddNewBook.cshtml
+++ b/Views/Book/AddNewBook.cshtml
@@ -74,6 +74,29 @@
 
     </div>
 
+
+
+    <div class="form-group">
+        <label asp-for="GalleryFile"></label>
+        <div class="custom-file">
+            <input asp-for="GalleryFile" class="custom-file-input" id="customFile" />
+
+        </div>
+        <span asp-validation-for="GalleryFile" class="text-danger"></span>
+
+    </div>
+
+    <div class="form-group">
+        <label asp-for="BookPdf"></label>
+        <div class="custom-file">
+            <input asp-for="BookPdf" class="custom-file-input" id="customFile" />
+
+        </div>
+        <span asp-validation-for="BookPdf" class="text-danger"></span>
+
+    </div>
+
+
     <br />
     <div class="form-group">
         <input type="submit" value="Add Book" class="btn btn-primary" />
