--- a/Views/Book/GetBook.cshtml
+++ b/Views/Book/GetBook.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Book detail " + Model.book.Title;
+    ViewData["Title"] = "Book detail " + Model.Title;
 }
-@*@model Book*@
+@model Book
 
 
 <div class="container">
@@ -10,20 +10,22 @@
         <div class="col-md-6">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    @for (int i = 0; i < Model.Gallery.Count(); i++)
+                    {
+                        <li data-target="#carouselExampleIndicators" data-slide-to="@i" class="@(i==0 ? "active" : "")"></li>
+
+                    }
+                  
                 </ol>
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img class="d-block w-100" src="~/images/book/book1.jpg?auto=yes&bg=777&fg=555&text=First slide" alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="~/images/book/book2.jpg?auto=yes&bg=666&fg=444&text=Second slide" alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="~/images/book/book3.jpg?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
-                    </div>
+                    @for (int i = 0; i < Model.Gallery.Count(); i++)
+                    {
+                        <div class="@(i==0 ? "carousel-item active" : "carousel-item")">
+                            <img class="d-block w-100" src="@Model.Gallery[i].URL" alt="@Model.Gallery[i].Name">
+                        </div>
+                    }
+
+                   
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -38,21 +40,21 @@
         <div class="col-md-6">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>@Model.book.Title</h1>
+                    <h1>@Model.Title</h1>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-12 text-primary">
                     <span class="label label-primary">By: </span>
-                    <span class="monospaced">@Model.book.Author</span>
+                    <span class="monospaced">@Model.Author</span>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-12">
                     <p class="description">
-                        @Model.book.Description
+                        @Model.Description
                     </p>
                 </div>
             </div>
@@ -68,9 +70,9 @@
             <hr />
 
             <ul class="list-group">
-                <li class="list-group-item"><span class="font-weight-bold">Category - </span> @Model.book.Category</li>
-                <li class="list-group-item"><span class="font-weight-bold">Total pages - </span> @Model.book.TotalPages</li>
-                <li class="list-group-item"><span class="font-weight-bold">Language - </span> @Model.book.Language</li>
+                <li class="list-group-item"><span class="font-weight-bold">Category - </span> @Model.Category</li>
+                <li class="list-group-item"><span class="font-weight-bold">Total pages - </span> @Model.TotalPages</li>
+                <li class="list-group-item"><span class="font-weight-bold">Language - </span> @Model.Language</li>
             </ul>
         </div>
     </div>
