--- a/Views/Book/GetBook.cshtml
+++ b/Views/Book/GetBook.cshtml
@@ -15,7 +15,7 @@
                         <li data-target="#carouselExampleIndicators" data-slide-to="@i" class="@(i==0 ? "active" : "")"></li>
 
                     }
-                  
+
                 </ol>
                 <div class="carousel-inner">
                     @for (int i = 0; i < Model.Gallery.Count(); i++)
@@ -25,7 +25,7 @@
                         </div>
                     }
 
-                   
+
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -61,7 +61,7 @@
 
             <div class="row">
                 <div class="col-md-4">
-                    <button class="btn btn-outline-primary">
+                    <button class="btn btn-outline-primary" data-toggle="modal" data-target="#exampleModal">
                         Read now
                     </button>
                 </div>
@@ -77,6 +77,26 @@
         </div>
     </div>
 
+
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                   @*<embed src="@Model.BookPdfUrl" class="w-100" />*@
+                    <iframe  src="@Model.BookPdfUrl" class="w-100"></iframe>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <hr />
 
     <div class="py-5 bg-light" id="similarBooks">
