--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,57 +12,14 @@
     <link href="~/lib/twitter-bootstrap/css/bootstrap-utilities.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" href="/">
-                    <img src="~/images/logo.jpg" width="100" height="100" asp-append-version="true" />
-                    Book store
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="btn btn-outline-primary">Login</a>
-                            <a class="btn btn-primary">Register</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="aboutus">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="contactus">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="book" asp-action="getallbooks">All Books</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="book" asp-action="AddNewBook">Add New Book</a>
-                        </li>
-                        @*<li class="nav-item">
-            <a class="nav-link text-dark" asp-protocol="http" asp-host="google.com"  asp-action="getallbooks">All Books</a>
-        </li>*@
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <partial name="_header" />
     <main role="main">
         @RenderBody()
     </main>
 
-    <footer class="border-top footer text-muted text-center">
-        <div class="container">
-            Copyright  &copy; Book Store @DateTime.Now.Year
-        </div>
-    </footer>
+    <partial name="_footer" />
+
+  
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/jquery-validate/jquery.validate.js"></script>
     <script src="~/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
