--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -29,13 +29,28 @@
         <h3 class="h3">Top books</h3>
         <div class="row">
             <div class="col-md-4">
-                <partial name="_bookThumbnail" model="new Book()" />
+                @*<partial name="_bookThumbnail" model="new Book()" />*@
+                @Html.Partial("_bookThumbnail", new Book())
             </div>
             <div class="col-md-4">
-                <partial name="_bookThumbnail" model="new Book()" />
+                @*<partial name="_bookThumbnail" model="new Book()" />*@
+                @await Html.PartialAsync("_bookThumbnail", new Book())
+
             </div>
             <div class="col-md-4">
-                <partial name="_bookThumbnail" model="new Book()"/>
+                @*<partial name="_bookThumbnail" model="new Book()"/>*@
+                @{
+                    Html.RenderPartial("_bookThumbnail", new Book());
+
+                }
+            </div>
+
+            <div class="col-md-4">
+                @*<partial name="_bookThumbnail" model="new Book()"/>*@
+                @{
+                    await Html.RenderPartialAsync("_bookThumbnail", new Book());
+
+                }
             </div>
         </div>
     </div>
