--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,32 +27,11 @@
 <div class="py-5 bg-light">
     <div class="container">
         <h3 class="h3">Top books</h3>
-        <div class="row">
-            <div class="col-md-4">
-                @*<partial name="_bookThumbnail" model="new Book()" />*@
-                @Html.Partial("_bookThumbnail", new Book())
-            </div>
-            <div class="col-md-4">
-                @*<partial name="_bookThumbnail" model="new Book()" />*@
-                @await Html.PartialAsync("_bookThumbnail", new Book())
 
-            </div>
-            <div class="col-md-4">
-                @*<partial name="_bookThumbnail" model="new Book()"/>*@
-                @{
-                    Html.RenderPartial("_bookThumbnail", new Book());
+        @await Component.InvokeAsync("TopBooks",new {count = 3 })
 
-                }
-            </div>
+        @*<vc:top-books></vc:top-books>*@
 
-            <div class="col-md-4">
-                @*<partial name="_bookThumbnail" model="new Book()"/>*@
-                @{
-                    await Html.RenderPartialAsync("_bookThumbnail", new Book());
-
-                }
-            </div>
-        </div>
     </div>
 </div>
 
