--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "All books";
 }
-@model IEnumerable<Book>
+@inject Book_Store.Repository.IBookRepository _bookRepository
 
 <section class="jumbotron text-center">
     <div class="container">
@@ -21,6 +21,12 @@
         <p>
             <a href="#" class="btn btn-primary my-2">Search books</a>
         </p>
+        
+        @foreach (var item in await _bookRepository.GetAllBooks())
+        {
+            <h2>@item.Author</h2>
+        }
+
     </div>
 </section>
 
