read configuration using GetSection method

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -22,10 +22,10 @@
             <a href="#" class="btn btn-primary my-2">Search books</a>
         </p>
         
-        @foreach (var item in await _bookRepository.GetAllBooks())
+        @*@foreach (var item in await _bookRepository.GetAllBooks())
         {
             <h2>@item.Author</h2>
-        }
+        }*@
 
     </div>
 </section>
