--- a/Views/Shared/_header.cshtml
+++ b/Views/Shared/_header.cshtml
@@ -1,11 +1,16 @@
-﻿@inject Microsoft.Extensions.Configuration.IConfiguration _configuration
+﻿@inject IConfiguration _configuration
+@using Microsoft.Extensions.Configuration
+@{
+    var newbook = _configuration.GetSection("NewBookAlert");
+
+            }
 
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
             <a class="navbar-brand" href="/">
                 <img src="~/images/logo.jpg" width="100" height="100" asp-append-version="true" />
-               @_configuration["AppName"]
+                @_configuration["AppName"]
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -41,4 +46,12 @@
             </div>
         </div>
     </nav>
+
+    @if (newbook.GetValue<bool>("DisplayNewBookAlert"))
+    {
+        <div class="alert alert-info" role="alert">
+            @(newbook.GetValue<string>("BookName"))
+        </div>
+    }
+
 </header>
