--- a/Views/Account/Signup.cshtml
+++ b/Views/Account/Signup.cshtml
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div>
-            <a asp-action="Index">Back to List</a>
+            <p>Click <a asp-action="Login" asp-controller="Account">here</a> to login</p>
         </div>
     </div>
 
